# core-stack-docs

./: .env  .gitignore  404.html  CNAME  DOCUMENTATION_RELEASE_SOP.md  README.md  corestack-backend-structure.txt  corestack-backend-tree.txt  index.html  main.py  mkdocs.yml  notes.md  pyproject.toml  sitemap.xml  structure.txt  uv.toml
api/: api-explorer.html  authentication.html  computing-endpoints.html  geoadmin-noauth.html  index.html  public-apis.html  public-endpoints.html  stac-specs.html
blog/: index.html
builders/: index.html
community/: code-of-conduct.html  contributing.html  contributions.html  core-stack-innovation-challenge.html  how-core-stack-is-used.html  index.html  tessera-student-innovation-call.html
developers/: add-new-data-resources.html  backend-code-map.html  build-new-pipelines.html  celery-auth-and-task-integration.html  coding-standards-and-guidelines.html  django-computing-api-integration.html  first-manual-api-run.html  index.html  installer.html  local-pipeline-first.html  setup-troubleshooting.html  system-architecture.html
docs/: CNAME  index.md
get-started/: index.html
installation/: install.sh  requirements.txt
local-first/: index.html
pipelines/: add-new-data-resources.html  admin-boundary.html  agroecological-space.html  aquifer-vector.html  build-new-pipelines.html  catchment-area.html  celery-auth-and-task-integration.html  common-design-and-integration-patterns.html  computation-registry.html  computing-endpoints.html  distance-to-nearest-drainage.html  django-computing-api-integration.html  drainage-lines.html  (+21 more)
(+273 files in other folders)
