[project]
name = "core-stack-docs"
version = "0.1.0"
description = "Here we provide comprehensive documentation for the CoRE stack, including installation guides, usage instructions, and architectural overviews."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material[imaging]>=9.7.4",
    "gitpython>=3.1.46",
    "mkdocs<2.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pymdown-extensions>=10.21",
    "streamlit>=1.55.0",
]
