[project]
name = "core-stack-docs"
version = "0.1.0"
description = "This is a comprehensive documentation for the CoRE stack."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mkdocs==1.6.0",
    "mkdocs-material[imaging]==9.7.6",
    "gitpython>=3.1.47",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pymdown-extensions>=10.21.2",
    "streamlit>=1.55.0",
]